фз 8-го спринта, исправлено